<resources>
    <string name="app_name">OrderManagerPico</string>
    <string name="text_describe_login_name">登录名</string>
    <string name="text_describe_login_password">密码</string>
    <string name="text_describe_tonnage">吨位</string>
    <string name="text_describe_product_name">产品名称</string>
    <string name="text_describe_client_name">客户名称</string>
    <string name="text_describe_wagon_id">车皮号</string>
    <string name="text_describe_wagon">车</string>
    <string name="text_describe_submit_date">下单日期</string>
    <string name="text_describe_rmb">元</string>
    <string name="text_describe_unit_price">每吨单价</string>
    <string name="text_describe_total_price">总价</string>
    <string name="text_describe_salesman_name">业务员</string>
    <string name="text_describe_receipt_date">收货日期</string>
    <string name="text_describe_note">备注</string>
    <string name="text_button_submit_order">提交订单</string>
    <string name="text_button_delivered">确认发货</string>
    <string name="text_button_cancel_order">取消订单</string>
    <string name="text_button_confirm_receipt">确认收货</string>
    <string name="text_button_confirm_payment">确认付款</string>
    <string name="text_button_finish_order">订单完成</string>
    <string name="text_button_login">登录</string>
    <string name="text_message_empty_input">一项或多项为空</string>
    <string name="text_message_wrong_username">用户名错误</string>
    <string name="text_message_wrong_pwd">密码错误</string>
    <string name="text_message_unknown_error">未知错误</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
