<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textViewProductName"
            style="@style/TextStyleCardMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewClientName"
            android:text="@string/text_describe_product_name" />

        <TextView
            android:id="@+id/textViewSendDate"
            style="@style/TextStyleCardMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textViewProductName"
            android:text="@string/text_describe_submit_date" />

        <TextView
            android:id="@+id/textViewTotalPrice"
            style="@style/TextStyleCardSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/text_describe_total_price" />

        <TextView
            android:id="@+id/textViewTonnage"
            style="@style/TextStyleCardSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/textViewTotalPrice"
            android:text="@string/text_describe_tonnage" />

        <TextView
            android:id="@+id/textViewUnitPrice"
            style="@style/TextStyleCardSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/textViewTonnage"
            android:text="@string/text_describe_unit_price" />

        <TextView
            android:id="@+id/textViewClientName"
            style="@style/TextStyleCardMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/textViewProductName"
            android:text="@string/text_describe_client_name" />

    </RelativeLayout>

</android.support.v7.widget.CardView>