<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_login_input_area"
            android:paddingRight="@dimen/padding_login_input_area">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_describe_login_name"
                android:id="@+id/textView"
                android:textSize="@dimen/size_text_large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextUsername" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_login_input_area"
            android:paddingRight="@dimen/padding_login_input_area" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_describe_login_password"
                android:id="@+id/textView2"
                android:textSize="@dimen/size_text_large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextPassword"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="@dimen/width_login_button"
        android:layout_height="wrap_content"
        android:text="@string/text_button_login"
        android:id="@+id/buttonLogin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/size_text_large"
        android:layout_marginBottom="@dimen/width_login_button"
        android:onClick="onLogin" />
</RelativeLayout>