<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        style="@style/CardView.Base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewProductName"
                style="@style/TextStyleCardMedium"
                android:layout_width="@dimen/width_neworder_cardview_large"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="false"
                android:layout_centerVertical="true"
                android:text="@string/text_describe_product_name" />

            <TextView
                android:id="@+id/textViewClientName"
                style="@style/TextStyleCardMedium"
                android:layout_width="@dimen/width_neworder_cardview_large"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="false"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/textViewProductName"
                android:layout_toRightOf="@+id/textViewProductName"
                android:text="@string/text_describe_client_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/size_text_medium" />

            <TextView
                android:id="@+id/textViewPrice"
                style="@style/TextStyleCardSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/textViewWagon"
                android:layout_toStartOf="@id/textView4"
                android:text="1000"
                android:textSize="@dimen/size_text_small" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextStyleCardSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView3"
                android:text="@string/text_describe_rmb"
                android:textSize="@dimen/size_text_small" />

            <TextView
                android:id="@+id/textViewWagon"
                style="@style/TextStyleCardSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/textView3"
                android:text="10"
                android:textSize="@dimen/size_text_small" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextStyleCardSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/text_describe_wagon"
                android:textSize="@dimen/size_text_small" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</FrameLayout>